# cats-file-format

./: .gitignore  format.md
cats-rs/: Cargo.toml
cats-rs/cli/: Cargo.toml
cats-rs/cli/src/: main.rs
cats-rs/meta/: Cargo.toml
cats-rs/meta/src/: error.rs  lib.rs  metadata.rs  utils.rs
cats-rs/packing/: Cargo.toml
cats-rs/packing/src/: lib.rs  packing.rs  serializing.rs
cats-rs/src/: error.rs  main.rs  serializing.rs  unpacking.rs  utils.rs
cats-rs/unpacking/: Cargo.toml
cats-rs/unpacking/src/: deserializing.rs  lib.rs  unpacking.rs
cats4j/: build.gradle.kts  settings.gradle.kts
cats4j/gradle/wrapper/: gradle-wrapper.properties
cats4j/src/main/java/me/owdding/cats/api/: CatsEntry.java  CatsException.java  CatsFile.java
cats4j/src/main/java/me/owdding/cats/api/compression/: CatsCompression.java  CatsCompressions.java
cats4j/src/main/java/me/owdding/cats/impl/: DataReader.java  EntryImpl.java
cats4r/: .gitignore  Cargo.toml
cats4r/src/: deserializing.rs  error.rs  main.rs  packing.rs  utils.rs
