[workspace]
members = ["meta", "packing", "unpacking", "cli"]
resolver = "3"

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
sha2 = "0.10.9"
hex = "0.4.3"
flate2 = "1.1.5"

packing = { path = "./packing" }
unpacking = { path = "./unpacking" }
meta = { path = "./meta" }